Layout finishes Two column layout on tablet and greater Icons for closed and open state Fix wrap and spacing on group and date text Empty state for calendar

--- a/src/components/DateCounter/DateCounter.scss
+++ b/src/components/DateCounter/DateCounter.scss
@@ -16,6 +16,7 @@
   &__date {
     @include typography_caption;
     font-weight: 500;
+    width: 100%;
     
     @include tablet {
       @include typography_paragraph;
